<resources>
    <!-- Basic Config Info -->
    <string name="app_main_title">IPMS</string>
    <string name="app_main_title_offline">IPMS - Offline Mode</string>
    <string name="app_name">Installers Performance &amp; Presence</string>
    <string name="app_name_login">INSTALLERS PERFORMANCE &amp; PRESENCE</string>
    <string name="action_synch">Synch Data</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>
    <string name="title_activity_maps">Map</string>
    <string name="copyright">Copyright &#169; PLDT ISNET. All rights reserved.</string>

    <!-- Strings related to login -->
    <string name="prompt_account">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Invalid Username</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Incorrect Username/Password</string>
    <string name="error_field_required">This field is required</string>
    <string name="status">Validating credentials from the server.</string>
    <string name="title_activity_main">Main</string>
    <string name="no_connection">Can\'t connect to the server, please check your internet connection.</string>
    <string name="async_status">Loading data from the server.</string>
    <string name="async_status_login">Validating user credential.</string>
    <string name="async_status_version">Checking updates from the server</string>
    <string name="receiver_logout">com.ipms.arena.ACTION_LOGOUT</string>

    <string name="loading">Loading</string>
    <string name="locating">Locating Address...</string>
    <string name="no_location">Location not found.</string>
    <string name="no_data">No data from the server</string>
    <string name="no_more_data">No more data from the device</string>

    <!-- Icons & Labels -->
    <string name="label_legend">Legend</string>
    <string name="legend_open">Assigned</string>
    <string name="legend_ack">Acknowledged</string>
    <string name="legend_closed">Closed</string>
    <string name="legend_rso">RSO</string>
    <string name="legend_dis">Dispatched</string>

    <string name="ic_all">&#xf009;&#160;</string>
    <string name="label_all">ALL</string>

    <string name="ic_open">&#xf0a4;&#160;&#160;</string>
    <string name="label_open">ASSIGNED</string>
    <string name="label_open_d">%1$d</string>

    <string name="ic_ack">&#xf087;&#160;&#160;</string>
    <string name="label_ack">ACKNOWLEDGED</string>
    <string name="label_ack_d">%1$d</string>

    <string name="ic_dis">&#xf1d9;&#160;&#160;</string>
    <string name="label_dis">DISPATCHED</string>
    <string name="label_dis_d">%1$d</string>

    <string name="ic_closed">&#xf046;&#160;&#160;</string>
    <string name="label_closed">CLOSED</string>
    <string name="label_closed_d">%1$d</string>

    <string name="ic_rso">&#xf122;&#160;&#160;</string>
    <string name="label_rso">RSO</string>
    <string name="label_rso_d">%1$d</string>

    <string name="ic_volume">&#xf080;</string>
    <string name="label_volume">Volume</string>

    <string name="ic_list">&#xf00b;</string>
    <string name="label_list">Installers</string>

    <string name="ic_map">&#xf041;</string>
    <string name="label_map">Location</string>

    <string name="ic_performance">&#xf080;</string>
    <string name="label_performance">Performance</string>

    <string name="ic_change">&#xf080;</string>
    <string name="label_change">GRAPH</string>

    <string name="breadcrumps">%1$s &#xf101; %2$s</string>
    <string name="ic_home">&#xf057;</string>

    <string name="indicator_close">&#xf078;</string>
    <string name="indicator_open">&#xf077;</string>

    <string name="ic_installer">&#xf0c0;</string>
    <string name="ic_missing">&#xf059;</string>
    <string name="missing">Missing Pindrop</string>
    <string name="missing_info">%1$d address(es) not able to locate on Google Map</string>
    <string name="ic_shut">&#xf057;</string>

    <string name="crash_report">Error sent to developer.</string>

    <!-- Google Map InfoWindow -->
    <string name="service_type"><b>SERVICE TYPE:</b> &#160;</string>
    <string name="order_type"><b>ORDER TYPE:</b> &#160;</string>
    <string name="ne_type"><b>NE TYPE:</b> &#160;</string>
    <string name="so_status"><b>STATUS:</b> &#160;</string>
    <string name="address"><b>ADDRESS:</b> &#160;</string>

    <!-- Sub-group Indicator -->
    <string name="collapse">&#xf146;</string>
    <string name="expand">&#xf0fe;</string>

    <!-- Set of parameters for SOAP Request -->
    <string-array name="Logon_Params">
        <item>username</item>
        <item>password</item>
        <item>isNT</item>
        <item>domain</item>
        <item>key</item>
    </string-array>

    <string-array name="Base_Params">
        <item>OptionType</item>
        <item>QueryType</item>
        <item>Criteria</item>
        <item>Criteria2</item>
        <item>Criteria3</item>
        <item>Criteria4</item>
        <item>Argument</item>
        <item>Argument2</item>
        <item>Argument3</item>
        <item>Argument4</item>
        <item>ApplicationKey</item>
    </string-array>

    <string-array name="MB_Base_Params">
        <item>OptionType</item>
        <item>zone</item>
        <item>contractor</item>
        <item>installer</item>
        <item>Criteria</item>
        <item>Criteria2</item>
        <item>Criteria3</item>
        <item>Criteria4</item>
        <item>Argument</item>
        <item>Argument2</item>
        <item>Argument3</item>
        <item>Argument4</item>
        <item>ApplicationKey</item>
    </string-array>


    <!-- Graph Label -->
    <string-array name="graph_label">
        <item>12:00 MN</item>
        <item>1:00 AM</item>
        <item>2:00 AM</item>
        <item>3:00 AM</item>
        <item>4:00 AM</item>
        <item>5:00 AM</item>
        <item>6:00 AM</item>
        <item>7:00 AM</item>
        <item>8:00 AM</item>
        <item>9:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 NN</item>
        <item>1:00 PM</item>
        <item>2:00 PM</item>
        <item>3:00 PM</item>
        <item>4:00 PM</item>
        <item>5:00 PM</item>
        <item>6:00 PM</item>
        <item>7:00 PM</item>
        <item>8:00 PM</item>
        <item>9:00 PM</item>
        <item>10:00 PM</item>
        <item>11:00 PM</item>
    </string-array>


    <!-- Chart Type -->
    <string-array name="chart_type">
        <item>BAR</item>
        <item>LINE</item>
        <item>PIE</item>
        <item>WEB</item>
    </string-array>

    <string-array name="chart_type_icon">
        <item>@string/ic_change</item>
        <item>&#xf201;</item>
        <item>&#xf200;</item>
        <item>&#xf140;</item>
    </string-array>

    <string-array name="chart_color">
        <item>#3F51B5</item>
        <item>#2196F3</item>
        <item>#795548</item>
        <item>#FF9800</item>
    </string-array>

    <string name="non_pldt">Non PLDT User</string>
    <string name="dialog_refresh">Would you like to refresh your data?</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>

</resources>
