<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Main">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_popup_sync_5"
        android:title="@string/action_synch"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        />

    <item
        android:id="@+id/action_synch"
        android:orderInCategory="100"
        android:title="@string/action_synch"
        android:visible="false"
        />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout" />

</menu>